Cleanup ssh config

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,7 +1,7 @@
+# Include the private config. No-op if it doesn't exists.
 Include ~/.ssh/config.private
 
 Host *
-     AddKeysToAgent yes
-     ForwardAgent   yes
-     ServerAliveInterval 60
-     ServerAliveCountMax 5
+  UserKnownHostsFile ~/.ssh_known_hosts
+  ServerAliveInterval 60
+  ServerAliveCountMax 5
