--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,14 +26,15 @@ bind C-n command-prompt -p new-session 'new-session -s %%'
 bind C-s set synchronize-panes
 
 # Enable pane border.
-set-window-option -g pane-border-status top
+#set-window-option -g pane-border-status top
 
 # Auto auto windows ids.
 set-option -g renumber-windows on
 
 # Window titles.
 set-option -g set-titles on
-set-window-option -g automatic-rename on # Auto rename window/pane.
+set-window-option -g automatic-rename off # Auto rename window/pane.
+set-option -g allow-rename on
 
 bind -n Home choose-tree
 # Cycling windows.
