set gruvbox colorscheme

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,7 +20,7 @@ bind C-r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
 bind C-h new-window 'htop'
 bind C-p new-window 'ping 8.8.8.8'
 bind C-d new-window 'dig google.com; sleep 4'
-bind C-e new-window -n '~/.tmux.conf' '${EDITOR:-emacs} ~/.tmux.conf && tmux source ~/.tmux.conf && tmux display "~/.tmux.conf sourced"'
+bind C-e new-window -n '~/.tmux.conf' 'emacsclient -a "" -c -t ~/.tmux.conf && tmux source ~/.tmux.conf && tmux display "~/.tmux.conf sourced"'
 bind C-f command-prompt -p find-session 'switch-client -t %%'
 bind C-n command-prompt -p new-session 'new-session -s %%'
 bind C-s set synchronize-panes
@@ -83,8 +83,6 @@ set-option -g history-limit 50000
 # Load powerline.
 run-shell "powerline-daemon -q"
 
-# Lookup the powerline path and load  the tmux bindings.
-run-shell "tmux source-file $(python3 -c 'import powerline; print(powerline.__path__[0])')/bindings/tmux/powerline.conf"
 
 # Blue theme.
 
@@ -144,3 +142,71 @@ set -g message-command-style bg=colour233,fg=black
 set -g mode-style bg=colour24,fg=colour231
 
 ## ! Blue theme.
+
+### theme settings ###
+
+# window separators
+set-option -wg window-status-separator ""
+
+# monitor window changes
+set-option -wg monitor-activity on
+set-option -wg monitor-bell on
+
+# set statusbar update interval
+set-option -g status-interval 1
+
+### colorscheme ###
+
+# change window screen colors
+set-option -wg mode-style bg="#FE8019",fg="#3C3836"
+
+# default statusbar colors (terminal bg should be #282828)
+set-option -g status-style bg=terminal,fg="#A89984"
+
+# default window title colors
+set-option -wg window-status-style bg="#3C3836",fg="#7C6F64"
+
+# colors for windows with activity
+set-option -wg window-status-activity-style bg="#3C3836",fg="#A89984"
+
+# colors for windows with bells
+set-option -wg window-status-bell-style bg="#3C3836",fg="#FE8019"
+
+# active window title colors
+set-option -wg window-status-current-style bg="#FE8019",fg="#3C3836"
+
+# pane border
+set-option -g pane-active-border-style fg="#FE8019"
+set-option -g pane-border-style fg="#3C3836"
+
+# message info
+set-option -g message-style bg="#FE8019",fg="#3C3836"
+
+# writing commands inactive
+set-option -g message-command-style bg="#A89984",fg="#3C3836"
+
+# pane number display
+set-option -g display-panes-active-colour "#FE8019"
+set-option -g display-panes-colour "#3C3836"
+
+# clock
+set-option -wg clock-mode-colour "#FE8019"
+
+# copy mode highlighting
+%if #{>=:#{version},3.2}
+    set-option -wg copy-mode-match-style "bg=#A89984,fg=#3C3836"
+    set-option -wg copy-mode-current-match-style "bg=#FE8109,fg=#3C3836"
+%endif
+
+# statusbar formatting
+# "#fe8019" MUST be in lowercase here (conflicts with statusline alias otherwise)
+set-option -g status-left "#[bg=#A89984, fg=#3C3836]#{?client_prefix,#[bg=#fe8019],#[bg=#A89984]} #{session_name} "
+set-option -g status-right "#[bg=#3C3836, fg=#7C6F64] %Y-%m-%d %H:%M:%S #[bg=#A89984, fg=#3C3836]#{?client_prefix,#[bg=#fe8019],#[bg=#A89984]} #{host_short} "
+
+set-option -wg window-status-current-format "#{?window_zoomed_flag,#[fg=default bold],#[fg=default]} #{window_index} #{window_name} "
+set-option -wg window-status-format "#{?window_zoomed_flag,#[fg=default bold],#[fg=default]} #{window_index} #{window_name} "
+
+## !Theme.
+
+# Lookup the powerline path and load  the tmux bindings.
+run-shell "tmux source-file $(python3 -c 'import powerline; print(powerline.__path__[0])')/bindings/tmux/powerline.conf"
