--- a/.tmux.conf
+++ b/.tmux.conf
@@ -81,132 +81,136 @@ bind c new-window -c "#{pane_current_path}"
 set-option -g history-limit 50000
 
 # Load powerline.
-run-shell "powerline-daemon -q"
+# run-shell "powerline-daemon -q"
 
+# # Blue theme.
+#
+# # Status update interval
+# set -g status-interval 1
+#
+# # Basic status bar colors
+# set -g status-style fg=colour238,bg=colour233
+#
+# # Left side of status bar
+# set -g status-left-style bg=colour233,fg=colour243
+# #set -g status-left-length 100
+# #set -g status-left "#[fg=colour232,bg=colour24,bold] #S #[fg=colour24,bg=colour240,nobold]#[fg=colour233,bg=colour240] #(whoami) #[fg=colour240,bg=colour235]#[fg=colour240,bg=colour235] #I:#P #[fg=colour235,bg=colour233,nobold]"
+#
+# # Right side of status bar
+# set -g status-right-style bg=colour233,fg=colour243
+# #set -g status-right-length 150
+# #set -g status-right "#[fg=colour235,bg=colour233]#[fg=colour240,bg=colour235] %H:%M:%S #[fg=colour240,bg=colour235]#[fg=colour233,bg=colour240] %d-%b-%y #[fg=colour24,bg=colour240]#[fg=colour232,bg=colour24,bold] #H "
+#
+# # Window status
+# set -g window-status-format "  #I:#W#F  "
+# set -g window-status-current-format "#[fg=colour233,bg=black]#[fg=colour33,nobold] #I:#P:#W#F #[fg=colour233,bg=black,nobold]"
+#
+# # Current window status
+# set -g window-status-current-style bg=colour24,fg=colour233
+#
+# # Window with activity status
+# set -g window-status-activity-style bg=colour233,fg=colour245
+#
+# # Window separator
+# set -g window-status-separator ""
+#
+# # Window status alignment
+# set -g status-justify centre
+#
+# # Pane border
+# set -g pane-border-style bg=default,fg=colour238
+#
+# # Active pane border
+# set -g pane-active-border-style bg=default,fg=colour24
+#
+# # Pane number indicator
+# set -g display-panes-colour colour233
+# set -g display-panes-active-colour colour245
+#
+# # Clock mode
+# set -g clock-mode-colour colour24
+# set -g clock-mode-style 24
+#
+# # Message
+# set -g message-style bg=colour24,fg=black
+#
+# # Command message
+# set -g message-command-style bg=colour233,fg=black
+#
+# # Mode
+# set -g mode-style bg=colour24,fg=colour231
+#
+# ## ! Blue theme.
 
-# Blue theme.
-
-# Status update interval
-set -g status-interval 1
-
-# Basic status bar colors
-set -g status-style fg=colour238,bg=colour233
-
-# Left side of status bar
-set -g status-left-style bg=colour233,fg=colour243
-#set -g status-left-length 100
-#set -g status-left "#[fg=colour232,bg=colour24,bold] #S #[fg=colour24,bg=colour240,nobold]#[fg=colour233,bg=colour240] #(whoami) #[fg=colour240,bg=colour235]#[fg=colour240,bg=colour235] #I:#P #[fg=colour235,bg=colour233,nobold]"
-
-# Right side of status bar
-set -g status-right-style bg=colour233,fg=colour243
-#set -g status-right-length 150
-#set -g status-right "#[fg=colour235,bg=colour233]#[fg=colour240,bg=colour235] %H:%M:%S #[fg=colour240,bg=colour235]#[fg=colour233,bg=colour240] %d-%b-%y #[fg=colour24,bg=colour240]#[fg=colour232,bg=colour24,bold] #H "
-
-# Window status
-set -g window-status-format "  #I:#W#F  "
-set -g window-status-current-format "#[fg=colour233,bg=black]#[fg=colour33,nobold] #I:#P:#W#F #[fg=colour233,bg=black,nobold]"
-
-# Current window status
-set -g window-status-current-style bg=colour24,fg=colour233
-
-# Window with activity status
-set -g window-status-activity-style bg=colour233,fg=colour245
-
-# Window separator
-set -g window-status-separator ""
-
-# Window status alignment
-set -g status-justify centre
-
-# Pane border
-set -g pane-border-style bg=default,fg=colour238
-
-# Active pane border
-set -g pane-active-border-style bg=default,fg=colour24
-
-# Pane number indicator
-set -g display-panes-colour colour233
-set -g display-panes-active-colour colour245
-
-# Clock mode
-set -g clock-mode-colour colour24
-set -g clock-mode-style 24
-
-# Message
-set -g message-style bg=colour24,fg=black
-
-# Command message
-set -g message-command-style bg=colour233,fg=black
-
-# Mode
-set -g mode-style bg=colour24,fg=colour231
-
-## ! Blue theme.
-
-### theme settings ###
-
-# window separators
-set-option -wg window-status-separator ""
-
-# monitor window changes
-set-option -wg monitor-activity on
-set-option -wg monitor-bell on
-
-# set statusbar update interval
-set-option -g status-interval 1
-
-### colorscheme ###
-
-# change window screen colors
-set-option -wg mode-style bg="#FE8019",fg="#3C3836"
-
-# default statusbar colors (terminal bg should be #282828)
-set-option -g status-style bg=terminal,fg="#A89984"
-
-# default window title colors
-set-option -wg window-status-style bg="#3C3836",fg="#7C6F64"
-
-# colors for windows with activity
-set-option -wg window-status-activity-style bg="#3C3836",fg="#A89984"
-
-# colors for windows with bells
-set-option -wg window-status-bell-style bg="#3C3836",fg="#FE8019"
-
-# active window title colors
-set-option -wg window-status-current-style bg="#FE8019",fg="#3C3836"
-
-# pane border
-set-option -g pane-active-border-style fg="#FE8019"
-set-option -g pane-border-style fg="#3C3836"
-
-# message info
-set-option -g message-style bg="#FE8019",fg="#3C3836"
-
-# writing commands inactive
-set-option -g message-command-style bg="#A89984",fg="#3C3836"
-
-# pane number display
-set-option -g display-panes-active-colour "#FE8019"
-set-option -g display-panes-colour "#3C3836"
-
-# clock
-set-option -wg clock-mode-colour "#FE8019"
-
-# copy mode highlighting
-%if #{>=:#{version},3.2}
-    set-option -wg copy-mode-match-style "bg=#A89984,fg=#3C3836"
-    set-option -wg copy-mode-current-match-style "bg=#FE8109,fg=#3C3836"
-%endif
-
-# statusbar formatting
-# "#fe8019" MUST be in lowercase here (conflicts with statusline alias otherwise)
-set-option -g status-left "#[bg=#A89984, fg=#3C3836]#{?client_prefix,#[bg=#fe8019],#[bg=#A89984]} #{session_name} "
-set-option -g status-right "#[bg=#3C3836, fg=#7C6F64] %Y-%m-%d %H:%M:%S #[bg=#A89984, fg=#3C3836]#{?client_prefix,#[bg=#fe8019],#[bg=#A89984]} #{host_short} "
-
-set-option -wg window-status-current-format "#{?window_zoomed_flag,#[fg=default bold],#[fg=default]} #{window_index} #{window_name} "
-set-option -wg window-status-format "#{?window_zoomed_flag,#[fg=default bold],#[fg=default]} #{window_index} #{window_name} "
-
-## !Theme.
+# ### theme settings ###
+#
+# # window separators
+# set-option -wg window-status-separator ""
+#
+# # monitor window changes
+# set-option -wg monitor-activity on
+# set-option -wg monitor-bell on
+#
+# # set statusbar update interval
+# set-option -g status-interval 1
+#
+# ### colorscheme ###
+#
+# # change window screen colors
+# set-option -wg mode-style bg="#FE8019",fg="#3C3836"
+#
+# # default statusbar colors (terminal bg should be #282828)
+# set-option -g status-style bg=terminal,fg="#A89984"
+#
+# # default window title colors
+# set-option -wg window-status-style bg="#3C3836",fg="#7C6F64"
+#
+# # colors for windows with activity
+# set-option -wg window-status-activity-style bg="#3C3836",fg="#A89984"
+#
+# # colors for windows with bells
+# set-option -wg window-status-bell-style bg="#3C3836",fg="#FE8019"
+#
+# # active window title colors
+# set-option -wg window-status-current-style bg="#FE8019",fg="#3C3836"
+#
+# # pane border
+# set-option -g pane-active-border-style fg="#FE8019"
+# set-option -g pane-border-style fg="#3C3836"
+#
+# # message info
+# set-option -g message-style bg="#FE8019",fg="#3C3836"
+#
+# # writing commands inactive
+# set-option -g message-command-style bg="#A89984",fg="#3C3836"
+#
+# # pane number display
+# set-option -g display-panes-active-colour "#FE8019"
+# set-option -g display-panes-colour "#3C3836"
+#
+# # clock
+# set-option -wg clock-mode-colour "#FE8019"
+#
+# # copy mode highlighting
+# %if #{>=:#{version},3.2}
+#     set-option -wg copy-mode-match-style "bg=#A89984,fg=#3C3836"
+#     set-option -wg copy-mode-current-match-style "bg=#FE8109,fg=#3C3836"
+# %endif
+#
+# # statusbar formatting
+# # "#fe8019" MUST be in lowercase here (conflicts with statusline alias otherwise)
+# set-option -g status-left "#[bg=#A89984, fg=#3C3836]#{?client_prefix,#[bg=#fe8019],#[bg=#A89984]} #{session_name} "
+# set-option -g status-right "#[bg=#3C3836, fg=#7C6F64] %Y-%m-%d %H:%M:%S #[bg=#A89984, fg=#3C3836]#{?client_prefix,#[bg=#fe8019],#[bg=#A89984]} #{host_short} "
+#
+# set-option -wg window-status-current-format "#{?window_zoomed_flag,#[fg=default bold],#[fg=default]} #{window_index} #{window_name} "
+# set-option -wg window-status-format "#{?window_zoomed_flag,#[fg=default bold],#[fg=default]} #{window_index} #{window_name} "
+#
+# ## !Theme.
 
 # Lookup the powerline path and load  the tmux bindings.
-run-shell "tmux source-file $(python3 -c 'import powerline; print(powerline.__path__[0])')/bindings/tmux/powerline.conf"
+#run-shell "tmux source-file $(python3 -c 'import powerline; print(powerline.__path__[0])')/bindings/tmux/powerline.conf"
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin "arcticicestudio/nord-tmux"
+
+run '~/.tmux/plugins/tpm/tpm'
