--- a/.tmux.conf
+++ b/.tmux.conf
@@ -208,9 +208,12 @@ set-option -g history-limit 50000
 # ## !Theme.
 
 # Lookup the powerline path and load  the tmux bindings.
-#run-shell "tmux source-file $(python3 -c 'import powerline; print(powerline.__path__[0])')/bindings/tmux/powerline.conf"
+run-shell "tmux source-file $(python3 -c 'import powerline; print(powerline.__path__[0])')/bindings/tmux/powerline.conf"
 
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin "arcticicestudio/nord-tmux"
+# set -g @plugin 'tmux-plugins/tpm'
+# set -g @plugin "arcticicestudio/nord-tmux"
+
+# set -g @plugin 'mattdavis90/base16-tmux'
+# set -g @colors-base16 'monokai'
 
 run '~/.tmux/plugins/tpm/tpm'
