--- a/.gitconfig
+++ b/.gitconfig
@@ -43,3 +43,8 @@
 
 [core]
 	excludesfile = ~/.gitignore.global
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
