--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,8 +21,7 @@ bind C-h new-window 'htop'
 bind C-p new-window 'ping 8.8.8.8'
 bind C-d new-window 'dig google.com; sleep 4'
 bind C-e new-window -n '~/.tmux.conf' 'emacsclient -a "" -c -t ~/.tmux.conf && tmux source ~/.tmux.conf && tmux display "~/.tmux.conf sourced"'
-bind C-f command-prompt -p find-session 'switch-client -t %%'
-bind C-n command-prompt -p new-session 'new-session -s %%'
+bind C-n command-prompt -p new-session 'new-session -A -s %%'
 bind C-s set synchronize-panes
 
 # Enable pane border.
