Add sqlformat to emacs

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -55,8 +55,8 @@ bind < resize-pane -L 25
 bind > resize-pane -R 25
 
 # Set status bar.
-set -g status-bg colour250
-set -g status-fg black
+#set -g status-bg colour250
+#set -g status-fg black
 
 # Faster statusbar refresh.
 set -g status-interval 15
@@ -206,13 +206,16 @@ set-option -g history-limit 50000
 #
 # ## !Theme.
 
-# Lookup the powerline path and load  the tmux bindings.
-run-shell "tmux source-file $(python3 -c 'import powerline; print(powerline.__path__[0])')/bindings/tmux/powerline.conf"
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'egel/tmux-gruvbox'
+set -g @tmux-gruvbox 'dark' # or 'light'
 
-# set -g @plugin 'tmux-plugins/tpm'
 # set -g @plugin "arcticicestudio/nord-tmux"
 
 # set -g @plugin 'mattdavis90/base16-tmux'
 # set -g @colors-base16 'monokai'
 
 run '~/.tmux/plugins/tpm/tpm'
+
+# Lookup the powerline path and load  the tmux bindings.
+run-shell "tmux source-file $(python3 -c 'import powerline; print(powerline.__path__[0])')/bindings/tmux/powerline.conf"
