Update bootstrap ubuntu

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,7 +4,7 @@ if-shell -b '[ "$(uname -s)" = "Linux" ]' " \
   set -g status-position top; \
 "
 if-shell -b '[ "$(uname -s)" = "Darwin" ]' " \
-  set -g default-shell /usr/local/bin/zsh; \
+  set -g default-shell /opt/homebrew/bin/zsh; \
   set -g status-position bottom; \
 "
 
